fix ui word wrap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -288,9 +288,12 @@ MAIN IRC
 	
 }
 
-
 .bufferchan .message {
-	
+	word-break: break-all;
+}
+
+.bufferchan .messagediv {
+	word-break: break-all;
 }
 
 .bufferchan .time {
